REFACTOR: Suppress bytebuddy warning